fix: login styling on mobile

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -25,7 +25,7 @@
   display: none;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 500px) {
   .hide {
     display: inline;
   }
